syntax = "proto3";
option java_multiple_files = true;
package com.example.protobuf.user;

message gRPCUser {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  string address = 4;
  int32 companyId = 5;
}

message UserRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  string address = 4;
  int32 companyId = 5;
}

message UserResponse {
  gRPCUser User = 1;
}

message UserResponses {
  repeated gRPCUser user = 1;
}

message UserFullInfoResponse {
  int32 userId = 1;
  string name = 2;
  int32 age = 3;
  string userAddress = 4;
  int32 companyId = 5;
  string companyName = 6;
  string companyAddress = 7;
}


service UserService {
  rpc addUser(UserRequest) returns (UserResponse);
  rpc getUser(UserRequest) returns (UserResponse);
  rpc getUsers(UserRequest) returns (UserResponses);
  rpc getUserFullInfo(UserRequest) returns (UserFullInfoResponse);
}